# JobSearch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  config.toml  docker-compose.ci.yml  docker-compose.yml  eslint.config.js  fly.toml  istruzioni_locale.md  package-lock.json  package.json  pyproject.toml  render.yaml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  daily-backup-pg-dump.yml  daily-backup.yml  sonarcloud.yml  weekly-backup-pg-dump.yml  weekly-cleanup.yml
backend/: .dockerignore  Dockerfile  alembic.ini  fly.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_audit_logs.py  003_add_notification_logs.py  004_add_interviews.py  005_interview_redesign.py  006_add_interview_files.py  007_add_batch_items.py  008_recover_applied_status.py  009_add_login_lockout.py  010_add_benefits_recruiter.py  011_add_analyses_hash_model_index.py  012_add_app_preferences.py  013_interview_multiround.py  014_add_notification_dismissals.py  015_add_todo_items.py  016_add_request_metrics.py  017_add_salary_data_and_company_news.py  018_add_career_track.py  019_add_analytics_runs_user_profile.py  020_add_inbox_items.py  021_add_analysis_source.py  022_add_linkedin_applications.py  023_add_batch_item_source.py  024_add_english_level_required.py  025_add_cv_english_level.py  026_add_fk_indexes.py  027_add_remaining_fk_indexes.py
backend/alembic_worldwild/: env.py
backend/alembic_worldwild/versions/: b17f6abc63d9_001_baseline_worldwild_schema.py  c1a2b3d4e5f6_002_decisions_unique_and_decision_idx.py  d2b3c4e5f6a7_003_decision_promotion_state.py  e3c4d5f6a7b8_004_job_offers_cv_match_score.py
backend/src/: ai_client.py  api_v1.py  app.py  config.py  database.py  dependencies.py  glassdoor.py  main.py  pages.py  prompts.py  rate_limit.py  read_routes.py
backend/src/agenda/: models.py  routes.py  service.py
backend/src/analysis/: api_routes.py  badges.py  followup_routes.py  models.py  routes.py  schemas.py  service.py
backend/src/analytics/: __init__.py  discriminator.py  extractor.py  (+2 more)
backend/templates/: index.html
backend/tests/: conftest.py  test_agenda_service.py  test_analysis_badges.py  test_analysis_import.py  test_analysis_service.py  test_analytics_bias_signals.py  test_analytics_build_report.py  test_analytics_run_integration.py  test_anthropic_client.py  test_api_key_auth.py  test_arbeitnow_client.py  test_audit_service.py  test_auth_service.py  test_batch_routes.py  test_batch_service.py  test_bola_protection.py  test_bulk_reject.py  test_cache_service.py  test_cleanup.py  test_config_toml.py  test_contacts_service.py  test_contacts_validation.py  test_cover_letter_service.py  test_cv_service.py  test_dashboard_broadcast_events.py  test_dashboard_service.py  test_dashboard_snapshot.py  test_db_dump.py  test_db_engine_keepalive.py  test_dependencies.py  test_document_reminder.py  test_document_scanner.py  test_errors_source_tagging.py  test_file_routes.py  test_findwork_client.py  test_glassdoor_helpers.py  test_health.py  test_inbox_notifications.py  test_inbox_service.py  test_inbox_stats.py  (+45 more)
docs/: LOCAL_DEV.md  architecture.drawio  technical.md
docs/plans/: 2026-02-13-feature-batch-design.md  2026-02-13-feature-batch.md  2026-02-14-final-refactor-design.md  2026-02-14-final-refactor.md  2026-02-24-interview-section-design.md  2026-02-24-interview-section-plan.md  2026-02-26-ui-redesign-design.md  Redesign_jobsearch.md
docs/screenshots/: README.md
frontend/: Dockerfile  nginx.conf
frontend/chrome-extension/: README.md  generate_icons.py  manifest.json  popup.css  popup.html  popup.js
frontend/templates/: 404.html  500.html  admin.html  agenda.html  analysis_detail.html  analytics.html  analyze.html  base.html  dashboard.html  history.html  index.html  interviews.html  login.html  news.html  notifications.html  settings.html  stats.html  worldwild.html
infra/checkly/: checks.tf  providers.tf  terraform.tfvars.example
mcp-server/: .env.example  anthropic_client.py  api_client.py  config.py  fly.toml  prompts.py  requirements.txt  server.py  validation.py
mcp-server/tests/: test_api_client.py  test_server.py
scripts/: analyze_db.py  dev_restore.py  export_db.py  import_linkedin_export.py
(+169 files in other folders)
