[project]
name = "jobsearch"
version = "2.0.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.27",
    "ruff>=0.15.11",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["backend/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "S",   # bandit security rules
    "T20", # print statements
    "RET", # return consistency
    "PTH", # pathlib usage
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function call in default arg (FastAPI Depends)
    "S104",   # possible binding to all interfaces (dev servers)
    "S105",   # hardcoded password (false positives on defaults)
    "S106",   # hardcoded password (false positives on defaults)
    "RET504", # unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101"]  # allow assert in tests
"mcp-server/tests/*" = ["S101"]  # allow assert in tests
"backend/alembic/*" = ["S"]   # migrations don't need security linting
"scripts/*" = ["T201"]        # CLI scripts use print() for UX
"frontend/chrome-extension/*.py" = ["T201"]  # standalone dev tooling

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.bandit]
exclude_dirs = ["backend/tests", "backend/alembic"]
skips = ["B101"]  # allow assert

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
# pytest-asyncio 1.x changed defaults — "auto" collects `async def` tests
# without a per-function mark, matching how they're written in
# test_notification_center_sse.py. Pinning the fixture loop scope
# also silences the deprecation warning that fires on every run.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
